# cudagravity

./: .gitignore  CMakeLists.txt  README.md  cudaMemory.cuh  definitions.cuh  main.cu  particle.cu  particle.cuh  requirements.txt  sdlHelper.cu  sdlHelper.cuh
common/: definitions.hpp  particle.hpp
generate_initial/: generate_initial.py  particle.py  pygame_editor.py  sample.yaml  writer.py  yaml_parser.py
sim/: cudaMemory.cuh  exportHelper.cu  exportHelper.cuh  main.cu
viewer/: main.cpp
